# data_engineering_course

./: .gitignore  LICENSE  README.md  pyproject.toml
week_1/: upload_data.ipynb
